===== 0.99.4 (??, 2012) =====

* Bulgarian hyphenation patterns, converted by Kaloyan Raev

===== 0.99.3 (November 18, 2012) =====

* Code is compilable for MacOS X (10.5+) with Qt library
* Added ability to read books from archives like ".tar", ".tar.gz" and ".tar.bz2" (original code by Serge Osnach)
* Added 'Recommend' item for LitRes network catalog
* Added convenient classification (by date, by author, by title, by series) for 'My Books' in LitRes network catalog
* Fixed crash on some ePubs from Project Gutenberg
* Encoding detection for doc (ms word) files
* RTF: fixed footnotes support
* ePub: fixed <pre>formatted text support
* Implemented new network library view
* Fixed crash after library scanning or book opening on some *.doc files

===== 0.99.2 (September 7, 2012) =====

* Added "My Books" (purchased books) section for LitRes catalog
* Hebrew localization (by David Kachan)
* Updated Finnish localization (by Marko Vertainen)
* Misc build & installation fixes (by kensington)

===== 0.99.1 (July 26, 2012) =====

* Fixed bug with freezing at start
* List of network libraries is updated now from fbreader.org
* Fixed working with secured connections (now authentification and books buying on LitRes.ru catalog works)
* Image support for Ms-Word doc format

===== 0.99.0 (July 5, 2012) =====

* Esperanto interface localization has been added (by Katarína Nosková)
* Hyphenation patterns for Polish (by Tomasz Długosz)
* Polish interface localization (by Tomasz Długosz)
* Speed of library scanning has been increased
* Plugin for reading MsWord (*.doc) books
* Fixed zip reading for several ePub books (e.g. for “die Zeit” ePubs)
* Support for book series in ePubs with point format (e.g. "2.5") has been added
* Fixed image support in RTF books
* Encoding & language recognizing has been improved
* As from version 0.99.0 FBReader for Linux supports qt4 interface only

===== 0.14.20100422 (April 22, 2010) =====
