@@ -12,7 +12,7 @@ RELEASE 0.99.4 (expected late November 2012):
   DONE bug: spinner icon
     between commits a6693fc41366e2559a9a605410578cc45cc30bd6 f035b2665a0812a2c706a502d344a10535b6b672
   ** bug: litres -> buy book -> authentication dialog -> cancel -> "no auth" message :(
-  ** bug: litres -> authors -> Горький -> название книги "О культура%%%%"
+  DONE bug: litres -> authors -> Горький -> название книги "О культура%%%%"
   ** bug: litres account state is not shown (button 'topup account')
   ** bug: litres login: sometimes program goes to the strange status, shows "sign out" button in right pane but requests authorization after double click on "My books" item
   ** litres: 'buy' button in book pane does not work
