@@ -1,6 +1,7 @@
 ===== 0.99.4 (??, 2012) =====
 
 * Bulgarian hyphenation patterns, converted by Kaloyan Raev
+* Network catalogs: fixed Cyryllic names rendering
 
 ===== 0.99.3 (November 18, 2012) =====
 
